--- a/ViaJsonBuilder/ViaJsonBuilder.csproj
+++ b/ViaJsonBuilder/ViaJsonBuilder.csproj
@@ -10,6 +10,7 @@
 
   <ItemGroup>
     <PackageReference Include="BlazorDownloadFile" Version="1.0.12" />
+    <PackageReference Include="Blazored.SessionStorage" Version="1.0.12" />
     <PackageReference Include="BlazorInputFile" Version="0.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.0" PrivateAssets="all" />
