--- a/ViaJsonBuilder/ViaJsonBuilder.csproj
+++ b/ViaJsonBuilder/ViaJsonBuilder.csproj
@@ -12,6 +12,7 @@
     <PackageReference Include="BlazorDownloadFile" Version="1.0.12" />
     <PackageReference Include="Blazored.SessionStorage" Version="1.0.12" />
     <PackageReference Include="BlazorInputFile" Version="0.2.0" />
+    <PackageReference Include="CurrieTechnologies.Razor.Clipboard" Version="1.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="3.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Build" Version="3.2.0" PrivateAssets="all" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="3.2.0" PrivateAssets="all" />
